--- a/1.html
+++ b/1.html
@@ -10,23 +10,35 @@
   <!--
 Обязательное задание.
 
-Необходимо пользователя попросить ввести температуру в градусах Цельсия,
-преобразовать введенное пользователем значение в соответствующую температуру
-в градусах по Фаренгейту и вывести в alert сообщение с текстом:
-"Цельсий: {C}, Фаренгейт: {F}"
-Где вместо {C} и {F} должны быть подставлены соответствующие значения, которые
-были получены ранее.
-Формула перевода градусов Цельсия в градусы Фаренгейта:
-градусы Фаренгейта = (9 / 5) * градусы Цельсия + 32
+Для кода вставленного в теге script необходимо дать комментарии, почему мы
+получаем такой результат (в свободной форме).
 
-Уточнение: пользователь всегда вводит корректное число.
+Подсказка. Чтобы лучше разобраться возьмите этот код и запустите в отладчике в
+браузере со включенными точками остановки.
 -->
   <script>
     "use strict";
-    const c = prompt(`Введите температуру в градусах Цельсия`)
-    const f = (9 / 5) * c + 32;
-    alert(`"Цельсий: ${c}, Фаренгейт: ${f}"`);
 
+    let a = 1, b = 1, c, d;
+
+    ++прибавляет еденицу и результат увеличеное(1 + 1=2)
+    c = ++a;
+    console.log(c);
+
+    прибавляет еденицу и результат первоначальное(1 + 1=1)
+    d = b++;
+    console.log(d);
+
+    2 + (1 + 2)=5, а присвоилось значенеи 2 в первом примере
+    c = 2 + ++a;
+    console.log(c);
+
+    2 + (2 + 1)=4   b присвоилось 2 во втором примере и тут постфик
+    d = 2 + b++;
+    console.log(d);
+
+    console.log(a);
+    console.log(b);
   </script>
 </body>
 
