--- a/2.html
+++ b/2.html
@@ -10,16 +10,22 @@
   <!--
 Обязательное задание.
 
-Необходимо создать переменную name, записать в эту переменную свое имя.
-Необходимо также создать переменную admin и присвоить этой переменной значение
-из переменной name.
-Вывести значение переменной admin в консоль.
+Для кода вставленного в теге script необходимо дать комментарии, почему мы
+получаем такой результат (в свободной форме).
+
+Подсказка. Чтобы лучше разобраться возьмите этот код и запустите в отладчике в
+браузере со включенными точками остановки.
 -->
   <script>
     "use strict";
-    let name = `Sergey`;
-    let admin = name;
-    console.log(admin);
+
+    let a = 2;
+    let x = 1 + (a *= 2);
+
+    x = 1 + 2 * 2=5
+    a = 2 * 2=4
+    console.log(x);
+    console.log(a);
 
   </script>
 </body>
