--- a/4.html
+++ b/4.html
@@ -10,71 +10,47 @@
   <!--
 Обязательное задание.
 
-Необходимо реализовать четыре функции, каждая функция должна принимать по два
-числа и выполнять одну из операций (каждая функция выполняет одну из них):
-1. Сложение
-2. Разность
-3. Умножение
-4. Деление
-
-Необходимо сделать так, чтобы функция вернула число, например выражение
-`console.log(sum(2, 6));` должно вывести число 8 в консоль (sum - функция
-сложения в данном примере, ваши названия функций могут отличаться).
-
-Округлять значения, которые возвращают функции не нужно, однако, обратите
-внимание на разность, функция должна вычесть из большего числа меньшее, либо
-вернуть 0, если числа равны.
-
-Функциям всегда передаются корректные числа, проверки на NaN, Infinity делать
-не нужно.
-
-Необходимо для всех функций прописать комментарии jsdoc https://jsdoc.app/.
+1. Необходимо вывести в консоль массив продуктов в котором есть хоть одна
+фотография используя метод filter. Исходные данные - массив products.
+2. Необходимо отсортировать массив products используя метод sort по цене,
+начиная с самой маленькой, заканчивая самой большой ценой, после чего вывести
+отсортированный массив в консоль.
 -->
   <script>
     "use strict";
 
-    /**
-     * Считает сумму переданных аргументов.
-     * @param {number} a - Первое число.
-     * @param {number} b - Второе число.
-     * @return {number} Сумма чисел.
-     */
-    function sum(a, b) {
-      return a + b;
-    }
+    const products = [
+      {
+        id: 3,
+        price: 127,
+        photos: [
+          "1.jpg",
+          "2.jpg",
+        ],
+      },
+      {
+        id: 5,
+        price: 499,
+        photos: [],
+      },
+      {
+        id: 10,
+        price: 26,
+        photos: [
+          "3.jpg",
+        ],
+      },
+      {
+        id: 8,
+        price: 78,
+      },
+    ];
 
-    /**
-     * Считает разницу переданных аргументов.
-     * @param {number} a - Первое число.
-     * @param {number} b - Второе число.
-     * @return {number} Разница чисел.
-     */
-    function difference(a, b) {
-      if (a > b) {
-        return a - b;
-      }
-      return b - a;
-    }
-
-    /**
-     * Считает произведение переданных аргументов.
-     * @param {number} a - Первое число.
-     * @param {number} b - Второе число.
-     * @return {number} Проиведение чисел.
-     */
-    function multiplication(a, b) {
-      return a * b;
-    }
-
-    /**
-     * Считает частное переданных аргументов.
-     * @param {number} a - Первое число.
-     * @param {number} b - Второе число.
-     * @return {number} Частное чисел.
-     */
-    function division(a, b) {
-      return a / b;
-    }
+    console.log(products.filter(
+      product => "photos" in product && product.photos.length !== 0
+    ));
+    products.sort((product1, product2) => product1.price - product2.price);
+    console.log(products);
   </script>
 </body>
 
