--- a/1.html
+++ b/1.html
@@ -10,35 +10,26 @@
   <!--
 Обязательное задание.
 
-Для кода вставленного в теге script необходимо дать комментарии, почему мы
-получаем такой результат (в свободной форме).
-
-Подсказка. Чтобы лучше разобраться возьмите этот код и запустите в отладчике в
-браузере со включенными точками остановки.
+Необходимо с помощью цикла for вывести следующие 11 строк в консоль:
+0 – это ноль
+1 – нечетное число
+2 – четное число
+3 – нечетное число
+…
+10 – четное число
 -->
   <script>
     "use strict";
 
-    let a = 1, b = 1, c, d;
-
-    ++прибавляет еденицу и результат увеличеное(1 + 1=2)
-    c = ++a;
-    console.log(c);
-
-    прибавляет еденицу и результат первоначальное(1 + 1=1)
-    d = b++;
-    console.log(d);
-
-    2 + (1 + 2)=5, а присвоилось значенеи 2 в первом примере
-    c = 2 + ++a;
-    console.log(c);
-
-    2 + (2 + 1)=4   b присвоилось 2 во втором примере и тут постфик
-    d = 2 + b++;
-    console.log(d);
-
-    console.log(a);
-    console.log(b);
+    for (let a = 0; a <= 10; a++) {
+      if (a === 0) {
+        console.log(`${a} - это ноль`);
+      } else if (a % 2 === 1) {
+        console.log(`${a} - это нечетное число`);
+      } else {
+        console.log(`${a} - это четное число`);
+      }
+    }
   </script>
 </body>
 
