--- a/1.html
+++ b/1.html
@@ -10,26 +10,50 @@
   <!--
 Обязательное задание.
 
-Необходимо с помощью цикла for вывести следующие 11 строк в консоль:
-0 – это ноль
-1 – нечетное число
-2 – четное число
-3 – нечетное число
-…
-10 – четное число
+Необходимо данное задание выполнить в es5 стиле и в es6 стиле.
+Необходимо создать функцию-конструктор/класс для продукта.
+Названия: `ProductES5` для es5 стиля, `ProductES6` для es6 стиля.
+При создании объекта от функции-конструктора/класса необходимо передавать имя
+и цену товара, эта информация должна быть сохранена в объекте.
+Также у объекта должна быть возможность выполнить метод `make25Discount`, данный
+метод должен уменьшать стоимость продукта на 25%.
+Необходимо продемонстрировать работу с объектом (в свободной форме).
 -->
   <script>
     "use strict";
+    function ProductES5(name, price) {
+      this.name = name;
+      this.price = price;
+    }
 
-    for (let a = 0; a <= 10; a++) {
-      if (a === 0) {
-        console.log(`${a} - это ноль`);
-      } else if (a % 2 === 1) {
-        console.log(`${a} - это нечетное число`);
-      } else {
-        console.log(`${a} - это четное число`);
+    ProductES5.prototype.make25Discount = function () {
+      this.price *= 0.75;
+    };
+
+    const productES5 = new ProductES5('Яблоко', 100);
+    console.log(`Название: ${productES5.name}, цена: ${productES5.price}`);
+    productES5.make25Discount();
+    console.log(`Название: ${productES5.name}, цена: ${productES5.price}`);
+
+
+    class ProductES6 {
+      constructor(name, price) {
+        this.name = name;
+        this.price = price;
+      }
+
+      make25Discount() {
+        this.price *= 0.75;
       }
     }
+
+    const productES6 = new ProductES6('Яблоко', 100);
+    console.log(`Название: ${productES6.name}, цена: ${productES6.price}`);
+    productES6.make25Discount();
+    console.log(`Название: ${productES6.name}, цена: ${productES6.price}`);
+
+
+
   </script>
 </body>
 
